[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.9.1"
edition = "2021"
rust-version = "1.85"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/alloy-evm"
repository = "https://github.com/alloy-rs/alloy-evm"
exclude = ["benches/", "tests/"]

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "allow" # TODO: https://github.com/rust-lang/rust-clippy/issues/14020
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
seismic-enclave = "0.1.0"

alloy-evm = { version = "0.9.1", path = "crates/evm", default-features = false }
alloy-op-evm = { version = "0.9.1", path = "crates/op-evm", default-features = false }

# alloy
alloy-eip2124 = { version = "0.2", default-features = false }
alloy-chains = { version = "0.2.0", default-features = false }
alloy-eips = { version = "1.0", default-features = false }
alloy-consensus = { version = "1.0.0", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false }
alloy-sol-types = { version = "1.0.0", default-features = false }
alloy-hardforks = { version = "0.2" }

# op-alloy
alloy-op-hardforks = { version = "0.2" }
op-alloy-consensus = { version = "0.16", default-features = false }

# seismic-alloy
seismic-alloy-consensus = { version = "0.0.1", default-features = false }

# revm
revm = { version = "23.1.0", default-features = false }
op-revm = { version = "4.0.1", default-features = false }
seismic-revm = { version = "1.0.0", default-features =  false }
#seismic-revm = { path = "../seismic-revm/crates/seismic", default-features = false }

# misc
auto_impl = "1"
derive_more = { version = "2", default-features = false, features = ["full"] }
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.0", default-features = false }
serde_json = "1"

[patch.crates-io]
# enclave
seismic-enclave = { git = "https://github.com/SeismicSystems/enclave.git", rev = "a347832" }

# alloy-core
alloy-dyn-abi = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "bc4b5ed" }
alloy-primitives = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "bc4b5ed" }
alloy-json-abi = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "bc4b5ed" }
alloy-sol-macro-expander = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "bc4b5ed" }
alloy-sol-macro-input = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "bc4b5ed" }
alloy-sol-types = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "bc4b5ed" }
alloy-sol-type-parser = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "bc4b5ed" }

# alloy
seismic-alloy-consensus = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "c0e56e6" }

# revm
revm = { git = "https://github.com/SeismicSystems/seismic-revm.git", branch = "m/rng-key" }
op-revm = { git = "https://github.com/SeismicSystems/seismic-revm.git", branch = "m/rng-key" }
seismic-revm = { git = "https://github.com/SeismicSystems/seismic-revm.git", branch = "m/rng-key" }
#revm = { path = "../seismic-revm/crates/revm" }
#op-revm = { path = "../seismic-revm/crates/op-revm" }
#seismic-revm = { path = "../seismic-revm/crates/seismic" }
