[package]
name = "alloy-seismic-evm"
description = "Seismic EVM implementation"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-evm = { workspace = true, features = ["op"] }
alloy-primitives.workspace = true
revm.workspace = true

seismic-revm = {workspace = true, features = ["secp256k1"]}
seismic-enclave.workspace = true

[features]
default = ["std"]
std = [
	"alloy-primitives/std",
	"revm/std",
	"alloy-evm/std",
	"seismic-revm/std",
]
